--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+	<meta name="jake" charset="UTF-8" content="width=device-width, initial-scale=1">
 	<title>Jake Maro</title>
 </head>
 <body>
 	<div class="bg">
-		<h1>Hello World!</h1>
 	</div>
 </body>
 </html>
