--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="styles.css">
 	<meta name="jake" charset="UTF-8" content="width=device-width, initial-scale=1">
 	<title>Jake Maro</title>
 </head>
