--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 	<title>Jake Maro</title>
 </head>
 <body>
-	<div class="bg">
+	<div class="bg"></div>
+	<div class="box">
+		<h1 class="logo">Metsani</h1>
+		<p class="slogan">Where dreams become memes.</p>
 	</div>
 </body>
 </html>
