Has an effect on hover rather than click

--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
 	<link rel="stylesheet" href="styles.css">
 	<meta name="jake" charset="UTF-8" content="width=device-width, initial-scale=1">
 	<title>Jake Maro</title>
+	<script src="script.js" type="text/javascript"></script>
 </head>
 <body>
 	<div class="bg"></div>
 	<div class="box">
 		<h1 class="logo">Metsani</h1>
-		<p class="slogan">Where dreams become memes.</p>
+		<p class="slogan">Get Started</p>
+		<div id="HiddenText"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla nec orci purus. Nulla sagittis dolor vitae efficitur ullamcorper. Vivamus pellentesque posuere nunc sit amet sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec tempor vitae erat et mollis. In ut lacinia tellus. Sed volutpat diam risus, at condimentum nibh viverra id. Suspendisse potenti. Aliquam erat volutpat. Vestibulum id rutrum tortor, et interdum arcu. Fusce sit amet justo ut nibh rutrum hendrerit. Suspendisse tempor nisl eget vehicula tempus. Nullam purus lorem, rhoncus vel nulla eu, pulvinar gravida ante.
+
+Nam ut hendrerit nisl. Donec vitae pretium lacus, rhoncus feugiat orci. Quisque sed leo at tortor ultricies mattis et quis nisi. Etiam sapien turpis, ultrices sed diam vel, luctus commodo nulla. Vivamus ante erat, vulputate non imperdiet quis, tempus vel lectus. Etiam et maximus elit. Suspendisse aliquet maximus magna pharetra congue.
+
+Aliquam condimentum nisi at orci dictum, sit amet varius felis auctor. Donec viverra enim eget ipsum interdum mollis. Etiam laoreet urna mauris. Nam at augue id est tristique efficitur. Aenean ornare rhoncus aliquam. Maecenas dolor metus, porta at nisl at, feugiat laoreet velit. Integer ut tincidunt enim, vel viverra mauris. Curabitur maximus sem et dictum vulputate. Nunc sollicitudin, nisi eu gravida vulputate, diam lacus vestibulum orci, nec vehicula metus dolor non leo. Aenean sed tincidunt nunc. Sed vitae porta urna. Quisque tempor nunc accumsan feugiat eleifend.
+
+Duis vel odio finibus, viverra risus eget, porttitor tellus. Ut suscipit congue rutrum. Duis suscipit dolor id pretium interdum. Vestibulum blandit felis eu sapien congue lobortis. Cras tempor at sapien tincidunt pharetra. Cras sagittis augue quis dapibus ornare. Praesent fermentum semper mauris. Phasellus sed finibus augue. Nunc tincidunt sit amet orci in malesuada. Proin euismod mauris sed neque venenatis mollis. Vivamus pulvinar, dolor eget gravida lacinia, ipsum justo pharetra enim, in tincidunt quam purus in erat.
+
+Suspendisse scelerisque dignissim purus a posuere. Vestibulum eget ante aliquet, ultrices felis a, accumsan neque. Aenean faucibus risus nec malesuada auctor. Etiam finibus tincidunt mi, vitae consectetur purus interdum nec. Sed nec justo sodales, mollis justo ullamcorper, varius lectus. Morbi non tristique risus, non mollis eros. Donec in eleifend massa, in aliquet neque. Cras ullamcorper ut arcu ac vestibulum. Fusce ex urna, egestas ut ante et, interdum tincidunt massa. Vivamus sollicitudin, orci ut tristique interdum, erat sapien viverra libero, ut ullamcorper neque nisi a metus. Mauris auctor ante nec libero posuere pulvinar. Ut at pharetra arcu, a lobortis turpis. Etiam nec commodo dolor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p></div>
 	</div>
 </body>
 </html>
